Fix menu collapse on iOs

--- a/css/grand-china-bistro.css
+++ b/css/grand-china-bistro.css
@@ -198,6 +198,10 @@ h4.collapsed:after {
     content: "\e114";    /* adjust as needed, taken from bootstrap.css */
 }
 
+h4.menu-collapse {
+    cursor: pointer;
+}
+
 .navbar-collapse h3 {
   text-align:center
 }
